Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25060

Incorrect Data Transfer stats during rebalance (vBuckets instead of keys)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 4.6.1
    • couchbase-bucket, DCP, UI
    • None
    • Couchbase Server 4.6.1 on CentOS 6
    • Triaged
    • Yes

    Description

      When rebalancing from 2 data nodes to 1, the number of docs to transfer for the beer-sample bucket (which contains 7303 docs), looks suspiciously like the number of vBuckets instead (512).

      This sounds very like MB-8374, and perhaps related to MB-8187.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              andreibaranouski Andrei Baranouski
              malarky Chris Malarky
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty